升级依赖 删除ant ivy构建文件